Antes de mexer nas opcoes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ nav li{
 }
 
 #wrapper{
-    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8)), url("hero-img.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8)), url("show.webp");
     background-position: center;
     background-size: cover;
     height: 100vh;
